--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             try {
                 const response = await fetch(SCRIPT_URL, {
                     method: 'POST',
+                    cache: 'no-cache', // Explicitly tell the browser not to cache this request
                     body: JSON.stringify(payload),
                     headers: { 'Content-Type': 'text/plain;charset=utf-8' }
                 });
