--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
             <header class="bg-white border-b p-4 flex justify-between items-center sticky top-0 z-10">
                 <button id="back-button" class="hidden text-xl text-gray-600 w-8 text-left"><i class="fas fa-chevron-left"></i></button>
                 <h1 id="header-title" class="text-xl font-bold text-gray-800 text-center flex-grow">ภาพรวม</h1>
-                <button id="logout-button" class="text-xl text-gray-600 w-8 text-right"><i class="fas fa-sign-out-alt"></i></button>
+                <!-- MODIFIED: Added a container for right-side buttons -->
+                <div class="flex items-center space-x-4">
+                    <button id="install-button" class="hidden text-xl text-gray-600 hover:text-pink-500" title="ติดตั้งแอปพลิเคชัน"><i class="fas fa-download"></i></button>
+                    <button id="logout-button" class="text-xl text-gray-600 hover:text-pink-500" title="ออกจากระบบ"><i class="fas fa-sign-out-alt"></i></button>
+                </div>
             </header>
             
             <main class="flex-1 overflow-y-auto p-4 pb-24">
@@ -689,6 +693,41 @@
         backButton.addEventListener('click', () => showPage('feed'));
         
         checkSession();
+
+        // === PWA INSTALLATION LOGIC ===
+        let deferredPrompt;
+        const installButton = document.getElementById('install-button');
+
+        window.addEventListener('beforeinstallprompt', (e) => {
+            // Prevent the mini-infobar from appearing on mobile
+            e.preventDefault();
+            // Stash the event so it can be triggered later.
+            deferredPrompt = e;
+            // Update UI to notify the user they can install the PWA
+            installButton.classList.remove('hidden');
+            console.log('PWA install prompt is ready.');
+        });
+
+        installButton.addEventListener('click', async () => {
+            // Hide the app provided install button
+            installButton.classList.add('hidden');
+            // Show the install prompt
+            deferredPrompt.prompt();
+            // Wait for the user to respond to the prompt
+            const { outcome } = await deferredPrompt.userChoice;
+            console.log(`User response to the install prompt: ${outcome}`);
+            // We've used the prompt, and can't use it again, throw it away
+            deferredPrompt = null;
+        });
+
+        window.addEventListener('appinstalled', () => {
+            // Hide the install button
+            installButton.classList.add('hidden');
+            deferredPrompt = null;
+            console.log('PWA was installed');
+            showMessageModal('ติดตั้งแอปพลิเคชันเรียบร้อยแล้ว!');
+        });
+        // ==============================
 
         // === PWA SERVICE WORKER REGISTRATION ===
         if ('serviceWorker' in navigator) {
