--- a/index.html
+++ b/index.html
@@ -269,7 +269,19 @@
             // Render main details (excluding image data)
             for (const [key, value] of Object.entries(data)) {
                 if (value && !['formType', 'rowId', 'sheetRow', 'images'].some(k => key.startsWith(k)) && !key.startsWith('creator')) {
-                    detailsHtml += `<div class="flex justify-between py-3 border-b"><span class="text-gray-500 w-1/3 break-words">${key}</span><span class="font-semibold text-right w-2/3 break-words">${value}</span></div>`;
+                    let displayValue;
+                    // MODIFIED: Check if the key is a GPS key and create a link
+                    if ((key === 'GPS') && String(value).includes(',')) {
+                        const [lat, lon] = String(value).split(',').map(s => s.trim());
+                        if (!isNaN(parseFloat(lat)) && !isNaN(parseFloat(lon))) {
+                            displayValue = `<a href="https://www.google.com/maps?q=${lat},${lon}" target="_blank" rel="noopener noreferrer" class="text-blue-500 hover:underline font-bold">${value}</a>`;
+                        } else {
+                            displayValue = value; // Fallback if parsing fails
+                        }
+                    } else {
+                        displayValue = value;
+                    }
+                    detailsHtml += `<div class="flex justify-between py-3 border-b"><span class="text-gray-500 w-1/3 break-words">${key}</span><span class="font-semibold text-right w-2/3 break-words">${displayValue}</span></div>`;
                 }
             }
 
@@ -458,7 +470,7 @@
                     </div>
                     <h3 class="text-xl font-bold mt-8 mb-6 border-b pb-4">ข้อมูลการติดตามผล</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                        <div class="md:col-span-2"><label class="form-label">GPS แปลง</label><div class="flex"><input name="GPSแปลง" id="gps-input" class="form-input rounded-r-none" value="${safeVal('GPSแปลง')}"><button type="button" onclick="getGeoLocation('gps-input')" class="bg-blue-500 text-white px-4 rounded-r-lg"><i class="fas fa-map-marker-alt"></i></button></div></div>
+                        <div class="md:col-span-2"><label class="form-label">GPS</label><div class="flex"><input name="GPS" id="gps-input" class="form-input rounded-r-none" value="${safeVal('GPS')}"><button type="button" onclick="getGeoLocation('gps-input')" class="bg-blue-500 text-white px-4 rounded-r-lg"><i class="fas fa-map-marker-alt"></i></button></div></div>
                         <div><label class="form-label">ลักษณะพื้นที่และดิน</label><input name="ลักษณะพื้นที่และดิน" class="form-input" value="${safeVal('ลักษณะพื้นที่และดิน')}"></div>
                         <div><label class="form-label">ปุ๋ยที่เคยใช้</label><input name="ปุ๋ยที่เคยใช้" class="form-input" value="${safeVal('ปุ๋ยที่เคยใช้')}"></div>
                         <div class="md:col-span-2"><label class="form-label">วิธีใช้ปุ๋ยทดลอง</label><textarea name="วิธีใช้ปุ๋ยทดลอง" class="form-textarea">${safeVal('วิธีใช้ปุ๋ยทดลอง')}</textarea></div>
@@ -654,7 +666,7 @@
             if (!map) return;
             map.eachLayer(layer => { if (layer instanceof L.Marker && !layer.options.isCurrentUser) map.removeLayer(layer); });
             allData.forEach(item => {
-                const gps = item['GPS'] || item['GPSแปลง'];
+                const gps = item['GPS'];
                 if (gps && gps.includes(',')) {
                     const [lat, lon] = gps.split(',').map(s => parseFloat(s.trim()));
                     if (!isNaN(lat) && !isNaN(lon)) {
