--- a/index.html
+++ b/index.html
@@ -266,17 +266,17 @@
             let detailsHtml = '', linkedHtml = '', galleryHtml = '';
             const mainName = data['ชื่อร้านค้า'] || data['ชื่อเกษตรกร'] || data['เกษตรกรเจ้าของแปลง'] || 'รายละเอียด';
             
-            // Render main details (excluding image data)
+            // Render main details
             for (const [key, value] of Object.entries(data)) {
                 if (value && !['formType', 'rowId', 'sheetRow', 'images'].some(k => key.startsWith(k)) && !key.startsWith('creator')) {
                     let displayValue;
-                    // MODIFIED: Check if the key is a GPS key and create a link
-                    if ((key === 'GPS') && String(value).includes(',')) {
+                    // MODIFIED: Check for both 'GPS' and 'GPSแปลง'
+                    if ((key === 'GPS' || key === 'GPSแปลง') && String(value).includes(',')) {
                         const [lat, lon] = String(value).split(',').map(s => s.trim());
                         if (!isNaN(parseFloat(lat)) && !isNaN(parseFloat(lon))) {
                             displayValue = `<a href="https://www.google.com/maps?q=${lat},${lon}" target="_blank" rel="noopener noreferrer" class="text-blue-500 hover:underline font-bold">${value}</a>`;
                         } else {
-                            displayValue = value; // Fallback if parsing fails
+                            displayValue = value;
                         }
                     } else {
                         displayValue = value;
@@ -470,7 +470,7 @@
                     </div>
                     <h3 class="text-xl font-bold mt-8 mb-6 border-b pb-4">ข้อมูลการติดตามผล</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                        <div class="md:col-span-2"><label class="form-label">GPS</label><div class="flex"><input name="GPS" id="gps-input" class="form-input rounded-r-none" value="${safeVal('GPS')}"><button type="button" onclick="getGeoLocation('gps-input')" class="bg-blue-500 text-white px-4 rounded-r-lg"><i class="fas fa-map-marker-alt"></i></button></div></div>
+                        <div class="md:col-span-2"><label class="form-label">GPSแปลง</label><div class="flex"><input name="GPSแปลง" id="gps-input" class="form-input rounded-r-none" value="${safeVal('GPSแปลง')}"><button type="button" onclick="getGeoLocation('gps-input')" class="bg-blue-500 text-white px-4 rounded-r-lg"><i class="fas fa-map-marker-alt"></i></button></div></div>
                         <div><label class="form-label">ลักษณะพื้นที่และดิน</label><input name="ลักษณะพื้นที่และดิน" class="form-input" value="${safeVal('ลักษณะพื้นที่และดิน')}"></div>
                         <div><label class="form-label">ปุ๋ยที่เคยใช้</label><input name="ปุ๋ยที่เคยใช้" class="form-input" value="${safeVal('ปุ๋ยที่เคยใช้')}"></div>
                         <div class="md:col-span-2"><label class="form-label">วิธีใช้ปุ๋ยทดลอง</label><textarea name="วิธีใช้ปุ๋ยทดลอง" class="form-textarea">${safeVal('วิธีใช้ปุ๋ยทดลอง')}</textarea></div>
@@ -666,9 +666,10 @@
             if (!map) return;
             map.eachLayer(layer => { if (layer instanceof L.Marker && !layer.options.isCurrentUser) map.removeLayer(layer); });
             allData.forEach(item => {
-                const gps = item['GPS'];
-                if (gps && gps.includes(',')) {
-                    const [lat, lon] = gps.split(',').map(s => parseFloat(s.trim()));
+                // MODIFIED: Check for both 'GPS' and 'GPSแปลง'
+                const gps = item['GPS'] || item['GPSแปลง'];
+                if (gps && String(gps).includes(',')) {
+                    const [lat, lon] = String(gps).split(',').map(s => parseFloat(s.trim()));
                     if (!isNaN(lat) && !isNaN(lon)) {
                         const name = item['ชื่อร้านค้า'] || item['ชื่อเกษตรกร'] || item['เกษตรกรเจ้าของแปลง'] || 'N/A';
                         const iconColor = { 'ร้านค้า': 'blue', 'เกษตรกร': 'green', 'แปลงทดลอง': 'violet' }[item.formType] || 'grey';
